@@ -145,7 +145,8 @@ def getCmd(snmpEngine, authData, transportTarget, contextData,
                 (errorIndication, errorStatus, errorIndex, varBindsUnmade)
             )
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     future = asyncio.Future()
 
@@ -250,7 +251,8 @@ def setCmd(snmpEngine, authData, transportTarget, contextData,
                 (errorIndication, errorStatus, errorIndex, varBindsUnmade)
             )
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     future = asyncio.Future()
 
@@ -361,7 +363,8 @@ def nextCmd(snmpEngine, authData, transportTarget, contextData,
                 (errorIndication, errorStatus, errorIndex, varBindsUnmade)
             )
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     future = asyncio.Future()
 
@@ -501,7 +504,8 @@ def bulkCmd(snmpEngine, authData, transportTarget, contextData,
                 (errorIndication, errorStatus, errorIndex, varBindsUnmade)
             )
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     future = asyncio.Future()
 
