@@ -128,7 +128,8 @@ def getCmd(snmpEngine, authData, transportTarget, contextData,
             else:
                 deferred.callback((errorStatus, errorIndex, varBindsUnmade))
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     deferred = Deferred()
 
@@ -244,7 +245,8 @@ def setCmd(snmpEngine, authData, transportTarget, contextData,
             else:
                 deferred.callback((errorStatus, errorIndex, varBindsUnmade))
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     deferred = Deferred()
 
@@ -374,7 +376,8 @@ def nextCmd(snmpEngine, authData, transportTarget, contextData,
             else:
                 deferred.callback((errorStatus, errorIndex, varBindsUnmade))
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     deferred = Deferred()
 
@@ -532,7 +535,8 @@ def bulkCmd(snmpEngine, authData, transportTarget, contextData,
             else:
                 deferred.callback((errorStatus, errorIndex, varBindsUnmade))
 
-    addrName, paramsName = lcd.configure(snmpEngine, authData, transportTarget)
+    addrName, paramsName = lcd.configure(
+        snmpEngine, authData, transportTarget, contextData.contextName)
 
     deferred = Deferred()
 
